# spotify-filter

./: Cargo.toml  README.md  configuration.toml  configuration.yaml
application/: Cargo.toml  build.rs
application/src/: configuration.rs  context.rs  main.rs  utils.rs
application/src/configuration/: configuration.rs  models.rs
application/src/configuration/models/: hotkeys.rs  spotify.rs
application/src/settings/: models.rs  settings.rs
application/src/settings/models/: filter_action.rs
application/src/utils/: hotkey_parser.rs
core/: Cargo.toml
core/src/: domain.rs  errors.rs  lib.rs  ports.rs  usecases.rs
core/src/domain/: models.rs  uri_parser.rs
core/src/domain/models/: spotify_uri.rs
core/src/errors/: errors.rs
core/src/ports/: ports_in.rs  ports_out.rs
core/src/ports/ports_in/: events.rs  settings.rs  spotify.rs
core/src/ports/ports_in/settings/: models.rs  settings_facade.rs  usecases.rs
core/src/ports/ports_in/settings/usecases/: get_playlists.rs  get_settings.rs  save_settings.rs
core/src/ports/ports_in/spotify/: spotify_facade.rs
core/src/ports/ports_in/spotify/usecases/: filter_track.rs  pass_track.rs  sign_in.rs  sign_out.rs  try_sign_in.rs
core/src/ports/ports_out/: auth.rs  browser.rs  client.rs  notification.rs  repository.rs  settings.rs
core/src/ports/ports_out/auth/: auth_url_builder.rs  pkce.rs
core/src/ports/ports_out/client/: spotify_api.rs  spotify_auth.rs
core/src/ports/ports_out/repository/: settings.rs  token.rs
core/src/ports/ports_out/server/: callback_server.rs
core/src/usecases/: spotify.rs
core/src/usecases/settings/: get_playlists.rs  get_settings.rs  save_settings.rs
core/src/usecases/spotify/: filter_track.rs  pass_track.rs  sign_in.rs  sign_out.rs  try_sign_in.rs
gui/: Cargo.toml  build.rs
gui/slint/: app_state.slint  app_window.slint  await_login.slint  login.slint  settings.slint  signed_in.slint
gui/src/: event_loop.rs  lib.rs  run.rs  starter.rs  window.rs
gui/src/window/: callbacks.rs  event_poll.rs  ui_window.rs
gui/src/window/callbacks/: auth.rs  settings.rs
gui/src/window/mapper/: settings_mapper.rs
infrastructure/: Cargo.toml
infrastructure/resources/: auth_success.html
infrastructure/src/: adapters_in.rs  adapters_out.rs  config.rs  lib.rs
infrastructure/src/adapters_in/: event_dispatcher.rs  hotkeys.rs  tray.rs
infrastructure/src/adapters_out/: auth.rs  browser.rs  notification.rs
infrastructure/src/adapters_out/auth/: pkce.rs  spotify_auth_url.rs
infrastructure/src/adapters_out/client/: spotify.rs
infrastructure/src/adapters_out/client/spotify/: action.rs  models.rs  playlist_sync_scheduler.rs  request_scheduler.rs  snapshot_cache.rs  spotify_api_client.rs  spotify_auth_client.rs  spotify_client.rs
infrastructure/src/adapters_out/repository/: credential_manager.rs  settings.rs  token.rs
infrastructure/src/adapters_out/repository/settings/: cache.rs  dto.rs  file.rs  mapper.rs
infrastructure/src/adapters_out/repository/settings/dto/: settings_dto.rs
infrastructure/src/adapters_out/repository/settings/mapper/: settings_mapper.rs
infrastructure/src/adapters_out/repository/token/: cache.rs  keyring.rs
infrastructure/src/adapters_out/server/: callback_server.rs
