[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../core", package = "core" }
global-hotkey = "0.7"
gui = { path = "../gui" }
infrastructure = { path = "../infrastructure" }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
tray-icon = "0.21"
serde_json = "1"
slint = "1.15"
dotenvy = "0.15"
image = "0.25"
url = "2"

[build-dependencies]
winres = "0.1"
