[package]
name = "application"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../core", package = "core" }
global-hotkey.workspace = true
gui = { path = "../gui" }
infrastructure = { path = "../infrastructure" }
serde.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tray-icon.workspace = true
slint.workspace = true
dotenvy.workspace = true
image.workspace = true
url.workspace = true

[build-dependencies]
winres.workspace = true
