[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = "1"
base64 = "0.22"
domain = { path = "../core", package = "core" }
tracing = "0.1.44"
keyring = { version = "3", features = ["windows-native"] }
open = "5"
rand = "0.8"
sha2 = "0.10"
url = "2"
global-hotkey = "0.7"
tray-icon = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
ureq = { version = "2", features = ["json"] }
winrt-notification = "0.5"
