[package]
name = "infrastructure"
version.workspace = true
edition.workspace = true

[dependencies]
domain = { path = "../core", package = "core" }
anyhow.workspace = true
base64.workspace = true
tracing.workspace = true
keyring.workspace = true
open.workspace = true
rand.workspace = true
sha2.workspace = true
url.workspace = true
global-hotkey.workspace = true
tray-icon.workspace = true
serde.workspace = true
serde_json.workspace = true
tiny_http.workspace = true
ureq.workspace = true
winrt-notification.workspace = true
indexmap.workspace = true
